# SnEnv

./: CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml  pr-check.yml
docs/: CMakeLists.txt  Doxyfile.in
env/: CMakeLists.txt
env/include/snenv/: api.h  defines.h  snenv.h
env/src/: CMakeLists.txt  snenv.c
env/src/nix/: snenv.c
env/src/win32/: snenv.c
test/: CMakeLists.txt  test.c
